Fixed z-index
z-index in #canvas must be >1 to display canvas above header and footer.

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    /*z-index: 0;*/
+    z-index: 1;
 }
 
 #jslicense-labels1 {
